<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_info">更新</string>
    <string name="soft_update_no">更新</string>
    <string name="soft_update_title">更新</string>
    <string name="soft_updating">更新</string>
    <string name="softupdate_progress">更新</string>
    <string name="soft_update_cancel">更新</string>

    <!-- 主页面start -->
    <!-- ListView整行的比重 -->
    <string name="listItemWeight">3</string>
    <!-- ListView每一个格子的比重（效果就是格子宽度是整行的1/3） -->
    <string name="listGridWeight">1</string>
    <!-- ListView菜单文字比重 -->
    <string name="listGridTextWeight">0.2</string>
    <!-- ListView菜单按钮的比重 -->
    <string name="listGridMenuButtonWeight">0.8</string>
    <!-- 小菜单文字 -->
    <string name="listGridMenuButtonRead">阅读</string>
    <string name="listGridMenuButtonDelete">删除</string>
    <string name="listGridMenuButtonReturn">返回</string>
    <!-- 图片文字说明 -->
    <string name="bookImage">书本封面</string>
    <string name="bookButtonImage">按钮图像</string>
    <!-- 下载进度条说明 -->
    <string name="download">已下载：</string>
    <!-- end -->


    <!-- 网上新书start -->
    <string name="str1">网上新书</string>
    <string name="success">下载完成</string>
    <string name="error">下载失败</string>
    <string name="sdcarderror">SDCard不存在或者写保护</string>
    <!-- end -->


    <!-- 杂志浏览模块 -->
    <string name="title_activity_main">杂志浏览</string>
    <string name="playStyle_Random">随即播放</string>
    <string name="playStyle_Sequence">顺序播放</string>
    <string name="play">播放</string>
    <string name="stringSprit">/</string>
    <string name="stringZero">0</string>
    <!-- end -->

</resources>